# polymarket_bot_weather

./: .codexignore  .env.example  .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  verify_fixes.py
deploy/logrotate/: polymarket-weather-bot-runtime
deploy/systemd/: dashboard.env.example  live-paper.env.example  polymarket-weather-bot.service  polymarket-weather-dashboard.service
docs/: VPS_LIVE_PAPER.md  dashboard-build-spec.md  live-trading-safety-plan.md  oracle-migration-handoff.md  paper-validation-runbook.md  production-decisions.md  production-implementation-plan.md  production-progress.md  shadow-signal-research.md  station-registry-audit.md  strategy-upgrade-chat-prompts.md  strategy-upgrade-roadmap.md  strategy-validation-documentation-plan.html  strategy-validation-documentation-plan.md  strategy-validation-roadmap.md
docs/active/: README.md  current-task.md  new-chat-task-prompts.md
docs/archive/: local-paper-reset-2026-06-07.md  production-handoff-history-2026-06-07.md
docs/codex/: README.md  (+8 more)
scripts/: daily_report.py  weekly_report.py
tests/: test_analyze_paper.py  test_config.py  test_daily_report.py  test_dashboard.py  test_deployment_files.py  test_edge.py  test_event_date_windows.py  test_exit_policy.py  test_hardening.py  test_nowcast_provider.py  test_paper_state_io.py  test_parser.py  test_portfolio.py  test_probability_ensemble.py  test_realtime_orderbook.py  test_realtime_runner.py  test_risk.py  test_runner_market_type.py  test_runner_status.py  test_shadow_signals.py  test_station_registry.py  test_workflow_defaults.py
(+123 files in other folders)
