[project]
name = "polymarket-weather-bot"
version = "0.2.0"
description = "Live-data paper-trading bot for Polymarket weather-market EV detection"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.0",
  "tzdata>=2024.1; platform_system == 'Windows'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
live-paper-bot = "weather_bot.live_paper_runner:main"
weather-dashboard = "weather_bot.dashboard:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
